--- a/src/app/details-produit/details-produit.component.html
+++ b/src/app/details-produit/details-produit.component.html
@@ -86,9 +86,11 @@ becomes
                         <div class="properties__intro">
                           Date Limite de consommation : {{boutique.DLC}}
                           <br>
+                          Quantité : {{boutique.quantite}}
                           <p-rating cancel="true" [(ngModel)]="val"></p-rating>
-                        </div><br><a href="property_details.html" class="properties__more">Ajouter au panier</a>
-                      </div>
+                        </div><br><div class="Global">
+                       <div class="champ centrage"><input ngModel name="quantite" class="champ" id="in-7a" min="1" max="{{boutique.quantite}}" type="number" placeholder="" required  class="form-control"></div><div class="droite"><a href="property_details.html" class="properties__more">Ajouter au panier</a></div>
+                      </div></div>
                       <!-- end of block .properties__info-->
 
                     </div>
