--- a/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
+++ b/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
@@ -26,7 +26,9 @@
 <br><br><br><br>
             <div class="widget js-widget widget--dashboard" *ngIf="user">
               <div class="widget__header">
-                <h2 class="widget__title">Profile</h2><a href="dashboard_profile.html" class="widget__btn js-widget-btn">Edit Profile</a>
+                <h2 class="widget__title">Profile</h2>
+                <a  class="widget__btn js-widget-btn" (click)="modifier(user.id)" >Modifier Compte</a>
+                <a  class="widget__btn js-widget-btn" (click)="supprimerUtilisateur(user.id)" >Supprimer Compte</a>
               </div>
               <div class="widget__content">
                 <div class="worker worker--profile">
