:sparkles: gestion boutique

--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -4,14 +4,19 @@
   <nav class="breadcrumbs">
     <div class="container">
       <ul>
-        <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Acceuil</a></li>
+        <li class="breadcrumbs__item"><a class="breadcrumbs__link">Acceuil</a></li>
       </ul>
     </div>
   </nav>
 
 
 </div>
+<div class="cont">
+  <span class="text1">Bienvenue</span>
+  <span class="text2">{{user.nom}} {{user.prenom}}</span></div>
 <div class="container">
+
+  <br><br><br><br>
 <div class="player">
   <video poster="http://codefactory47.com/public/realtyspace/media/playercover.jpg" controls crossorigin>
     <source src="http://codefactory47.com/public/realtyspace/media/videotour.mp4" type="video/mp4">
