--- a/src/app/boutique/profil/profil.component.html
+++ b/src/app/boutique/profil/profil.component.html
@@ -72,7 +72,8 @@
                       <div class="row">
                         <div class="form-group form-group--description">
                           <label for="in-13" class="control-label">Horaire</label>
-                          <textarea ngModel  name="horaire" id="in-13" required data-parsley-trigger="keyup" data-parsley-minlength="200" data-parsley-validation-threshold="10" data-parsley-minlength-message="You need to enter at least a 200 caracters long comment.." class="form-control form-control--description"></textarea>
+                          <textarea ngModel  name="horaire" id="in-13" required data-parsley-trigger="keyup" placeholder="Ouvert tous les jours de 7h30 à 17h sauf le Dimanche et le Samedi
+" data-parsley-minlength="200" data-parsley-validation-threshold="10" data-parsley-minlength-message="You need to enter at least a 200 caracters long comment.." class="form-control form-control--description"></textarea>
                         </div>
                       </div>
                     </div>
@@ -104,6 +105,20 @@
                         <div class="form-group form-group--social">
                           <label for="twitter-field7" class="control-label">Longitude</label>
                           <input ngModel name="mapLng" id="twitter-field7" type="text" placeholder="10.189356669083528" required class="form-control">
+                        </div>
+
+                      </div>
+                    </div>
+                    <header class="form__header">
+                      <h3 data-rel="#form-block-4" class="form__title js-form-title">Visite Virtuelle</h3>
+                    </header>
+                    <div class="site__panel"><span class="site__header-text">Vous pouvez utiliser  <a href="https://panoraven.com/fr/share-360-photo">ce lien</a> pour créer la visite virtuelle de votre
+                      boutique sous forme 360° gratuitement et copier le lien  ci-dessous .</span></div>
+                    <div id="form-block-4547" class="form__block js-form-block">
+                      <div class="row">
+                        <div class="form-group form-group--social">
+                          <label for="facebook-field7" class="control-label">Lien direct</label>
+                          <input ngModel name="visite" id="facebook-field77" type="text" placeholder="https://panoraven.com/fr/slider/SjrUeJ5sB4" required  class="form-control">
                         </div>
 
                       </div>
