--- a/src/app/ajouter-produit/ajouter-produit.component.html
+++ b/src/app/ajouter-produit/ajouter-produit.component.html
@@ -75,7 +75,7 @@
                         </div>
                         <div class="form-group">
                           <label for="dlc"  class="control-label">Date limite de consommation</label>
-                          <p-calendar type="date" ngModel id="dlc" name="DLC" [(ngModel)]="value" dateFormat="yy-mm-dd" showButtonBar="true" ></p-calendar>
+                          <p-calendar type="date" [minDate]="mindate"  ngModel id="dlc" name="DLC" [(ngModel)]="value" dateFormat="yy-mm-dd" showButtonBar="true" ></p-calendar>
                         </div>
 
 
