--- a/src/app/boutique/afficher/afficher.component.html
+++ b/src/app/boutique/afficher/afficher.component.html
@@ -28,14 +28,14 @@
 
               <div class="widget js-widget widget--dashboard">
                 <div class="widget__header">
-                  <h2 class="widget__title">Profile</h2>
-                  <a  class="widget__btn js-widget-btn">Modifier Boutique</a>
+                  <h2 class="widget__title">Profil</h2>
+                  <a  class="widget__btn js-widget-btn" (click)="modifier()">Modifier Boutique</a>
                   <a  class="widget__btn js-widget-btn" (click)="deleteBoutique()">Supprimer Boutique</a>
                 </div>
                 <div class="widget__content">
                   <div class="worker worker--profile">
                     <div class="worker__item">
-                      <div class="worker__photo"><a href="agent_profile.html" class="item-photo item-photo--static"><img src="http://localhost:3000/boutique/profileimage/{{boutique1.photo}}" class="photo" width="200" height="200">
+                      <div class="worker__photo"><a  class="item-photo item-photo--static"><img src="http://localhost:3000/boutique/profileimage/{{boutique1.photo}}" class="photo" width="200" height="200">
                         <figure class="item-photo__hover"><span class="item-photo__more">View Details</span></figure></a></div>
                       <div class="worker__intro">
                         <h3 class="worker__name fn">{{boutique1.nom}}</h3>
@@ -43,12 +43,14 @@
                         <div class="clearfix"></div>
                         <div class="worker__contacts">
                           <div class="worker__intro-col">
-                            <div class="tel"><span class="type">Telephone</span><a href="tel:+44(0)30334657220" class="uri value">{{boutique1.user.numtel}}</a></div>
-                            <div class="tel"><span class="type">Adresse</span><a href="tel:+44(0)30334657220" class="uri value">{{boutique1.adresse}}</a></div>
+                            <div class="tel"><span class="type">Telephone</span><a class="uri value">{{boutique1.user.numtel}}</a></div>
+                            <div ><span class="type">Adresse</span><a  class="uri value">{{boutique1.adresse}}</a></div>
                           </div>
                           <div class="worker__intro-col">
-                            <div class="email"><span class="type">Email</span><a href="mailto:mr_cs@realtyspace.com" class="uri value">{{boutique1.mailprofessionnelle}}</a></div>
-                            <div class="skype"><span class="type">Horaire</span><a href="skype:Ciesla_1981?call" class="uri value">{{boutique1.horaire}}</a></div>
+                            <div ><span class="type">Email</span><a  class="uri value">{{boutique1.mailprofessionnelle}}</a></div>
+                          </div>
+                          <div class="worker__intro-col">
+                            <div ><span class="type">Horaires D'ouverture</span><a  class="uri value">{{boutique1.horaire}}</a></div>
                           </div>
                           <!-- end of block .worker__contacts-->
                           <div *ngIf="lat && lng">
@@ -60,6 +62,7 @@
                                 </agm-info-window>
                               </agm-marker></agm-map>
                           </div>
+
                         </div>
                           <div class="social social--worker"><a href="{{boutique1.facebook}}" class="social__item"><i class="fa fa-facebook"></i></a><a href="{{boutique1.instagram}}" class="social__item"><i class="fa fa-instagram"></i></a></div>
 
@@ -67,6 +70,10 @@
 
 
                     </div>
+                  </div>
+                  <div>
+                    <iframe width="90%" height="500px"  allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);"
+                            [src]="controllerSrc"></iframe>
                   </div>
                 </div>
               </div>
