--- a/src/app/details-produit/details-produit.component.html
+++ b/src/app/details-produit/details-produit.component.html
@@ -88,7 +88,15 @@ becomes
                           <br>
                           Quantité : {{boutique.quantite}}
                           <p-rating cancel="true" [(ngModel)]="val"></p-rating>
-                        </div><br>
+                        </div>
+                        <br>
+
+                        <div class="champ centrage"> <a  class="properties__more" type="submit" (click)="PasserUneCommande()">Supprimer</a>
+                        </div>
+                        <div class="droite">  <a  class="properties__more" type="submit" (click)="PasserUneCommande()">Modifer</a>
+                        </div>
+                        <br>
+                        <br>
 
                        <div class="champ centrage"><input [(ngModel)]="quantite" name="quantite" class="champ" id="in-7a" min="1" max="{{boutique.quantite}}" type="number" placeholder="" required  class="form-control"></div><div class="droite"><a  class="properties__more" type="submit" (click)="PasserUneCommande()">Passer une commande</a></div>
 
