--- a/src/app/boutique/produit-boutique/produit-boutique.component.html
+++ b/src/app/boutique/produit-boutique/produit-boutique.component.html
@@ -43,7 +43,7 @@
                   </div>
                   <!-- end of block .properties__thumb-->
                   <div class="properties__details">
-                    <div class="properties__info"><span class="properties__address-street">{{boutiques.nom}}</span><span class="properties__address-city"><p-rating readonly=true [(ngModel)]="val"></p-rating></span>
+                    <div class="properties__info"><span class="properties__address-street">{{boutiques.nom}}</span>
                       <div class="properties__offer">
                         <div class="properties__offer-column">
                           <div class="properties__offer-label">Prix sans remise</div>
