--- a/src/app/details-produit/details-produit.component.html
+++ b/src/app/details-produit/details-produit.component.html
@@ -87,7 +87,7 @@ becomes
                           Date Limite de consommation : {{boutique.DLC}}
                           <br>
                           Quantité : {{boutique.quantite}}
-                          <p-rating cancel="true" [(ngModel)]="val"></p-rating>
+                          <p-rating cancel="false" readonly="true" [(ngModel)]="val"></p-rating>
                         </div>
                         <br>
 
