--- a/src/app/page-boutique/page-boutique.component.html
+++ b/src/app/page-boutique/page-boutique.component.html
@@ -414,7 +414,7 @@ becomes
                   </div>
                   <!-- end of block .properties__thumb-->
                   <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">{{boutiques.nom}}</span><span class="properties__address-city"><p-rating readonly=true [(ngModel)]="val"></p-rating></span></a>
+                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">{{boutiques.nom}}</span></a>
                       <div class="properties__offer">
                         <div class="properties__offer-column">
                           <div class="properties__offer-label">Prix sans remise</div>
