--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -11,7 +11,7 @@
 
 
 </div>
-<div class="cont">
+<div *ngIf="user" class="cont">
   <span class="text1">Bienvenue</span>
   <span class="text2">{{user.nom}} {{user.prenom}}</span></div>
 <div class="container">
