--- a/src/app/commande/commande.component.html
+++ b/src/app/commande/commande.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+
 <div class="site__main">
   <div class="widget js-widget widget--main">
     <div class="widget__content">
@@ -24,7 +24,7 @@
               itemsPerPage: 3,
               currentPage: page,
               totalItems: totalRecords}" data-info="&lt;table class=&quot;table table--stripped&quot;&gt;&lt;tr&gt;&lt;td&gt;Bedrooms:&lt;/td&gt;&lt;td&gt;0&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;Floor:&lt;/td&gt;&lt;td&gt;3&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;Area:&lt;/td&gt;&lt;td&gt;12&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;Status:&lt;/td&gt;&lt;td&gt;For sale &lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;/td&gt;&lt;td&gt;Price:&lt;/td&gt;&lt;td&gt; $402,000 &lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;Commision:&lt;/td&gt;&lt;td&gt; 3% &lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;Credit:&lt;/td&gt;&lt;td&gt; $8,000&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;">
-              <td class="datatable__cell-1"><img src="assets/img/milka-oreo_1.jpg" alt="Avatar" width="100" height="100"></td>
+              <td class="datatable__cell-1"><img src="http://localhost:3000/produit/image/{{boutiques.produit.photo1}}" alt="Avatar" width="100" height="100"></td>
               <td class="datatable__cell-2">{{boutiques.produit.nom}}</td>
               <td class="datatable__cell-3"><strong> {{boutiques.produit.categorie}}</strong>
               </td>
@@ -32,10 +32,11 @@
               <td class="datatable__cell-5">{{boutiques.produit.DLC}}</td>
               <td class="datatable__cell-6">{{boutiques.quantite}}</td>
               <td class="datatable__cell-7">{{boutiques.produit.prixavecremise}}</td>
-              <td class="datatable__cell-8">2 days ago</td>
+              <td class="datatable__cell-8">{{boutiques.prixtotale}}</td>
               <td class="datatable__cell-9">{{boutiques.date}}</td>
 
-              <td class="datatable__cell-10"> <button  type="submit" class="btn btn-blue" (click)="generatePdf(boutiques.id)"><i class="fa fa-file-pdf-o"></i></button></td>
+              <td class="datatable__cell-10"> <button  type="submit" class="btn btn-blue" (click)="generatePdf(boutiques.id)"><i class="fa fa-file-pdf-o"></i></button>
+                </td>
             </tr>
 
             </tbody>
@@ -60,7 +61,7 @@
       <pagination-controls id="listing_pagination" maxSize="5" directionLinks="true" (pageChange)="page = $event"></pagination-controls>
     </ul>
   </nav>
-</div>
+
 
   <!-- BEGIN PAGINATION-->
 
