--- a/src/app/details-produit/details-produit.component.html
+++ b/src/app/details-produit/details-produit.component.html
@@ -62,9 +62,16 @@ becomes
                 <div class="listing listing--list js-properties-list">
                   <div class="listing__item">
                     <div class="properties properties--list">
-                      <div class="properties__thumb"><a href="property_details.html" class="item-photo"><img src="/assets/img/0602277368516-web-tete.jpg" alt=""/>
+                      <div class="properties__thumb"><a href="property_details.html" class="item-photo"><img src="http://localhost:3000/produit/image/{{boutique.photo1}}" alt=""/>
+
                         <figure class="item-photo__hover item-photo__hover--params"><span class="properties__time">Réference: {{boutique.reference}}</span>
-                        </figure></a><span class="properties__ribon">{{boutique.categorie}}</span>
+                        </figure></a>
+                        <br>
+                        <div  class="form-property__upload-border">
+                          <input type="file" (change)="UploadImage($event)" class="form-property__upload-btn-choose">
+
+                        </div>
+                        <span class="properties__ribon">{{boutique.categorie}}</span>
                       </div>
                       <!-- end of block .properties__thumb-->
                       <div class="properties__details">
@@ -88,6 +95,7 @@ becomes
                           <br>
                           Quantité : {{boutique.quantite}}
                           <p-rating cancel="false" readonly="true" [(ngModel)]="val"></p-rating>
+
                         </div>
                         <br>
 
