--- a/src/app/page-boutique/page-boutique.component.html
+++ b/src/app/page-boutique/page-boutique.component.html
@@ -408,8 +408,8 @@ becomes
               currentPage: page,
               totalItems: totalRecords}">
                 <div class="properties properties--grid">
-                  <div class="properties__thumb"><a   class="item-photo"><img src="/assets/img/0602277368516-web-tete.jpg" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"><span class="properties__params">Douleur et fièvre</span> <span class="properties__time">Ajouter le: {{boutiques.createdAt}}</span><span  class="properties__more" (click)="gotodetails(boutiques.boutique.id,boutiques.id)">Plus d'information</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span><span class="properties__time">Quantité: {{boutiques.quantite}}</span>
+                  <div class="properties__thumb"><a   class="item-photo"><img src="http://localhost:3000/produit/image/{{boutiques.photo1}}" max-width="20px" max-height="20px" alt=""/>
+                    <figure class="item-photo__hover item-photo__hover--params"> <span class="properties__time">Ajouter le: {{boutiques.createdAt}}</span><span  class="properties__more" (click)="gotodetails(boutiques.boutique.id,boutiques.id)">Plus d'information</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span><span class="properties__time">Quantité: {{boutiques.quantite}}</span>
                     </figure></a><span class="properties__ribon">{{boutiques.categorie}}</span>
                   </div>
                   <!-- end of block .properties__thumb-->
