--- a/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
+++ b/src/app/utilisateur/profilutilisateur/profilutilisateur.component.html
@@ -93,7 +93,7 @@
                     <ul>
 
                       <li><a  >Profil</a></li>
-                      <li><a (click)="gotoboutique()" >Vos Boutiques</a></li>
+                      <li><a *ngIf="status" (click)="gotoboutique()" >Vos Boutiques</a></li>
                     </ul>
                   </nav>
                   <!-- end of block .worker__nav-->
