--- a/src/app/page-boutique/page-boutique.component.html
+++ b/src/app/page-boutique/page-boutique.component.html
@@ -409,12 +409,12 @@ becomes
               totalItems: totalRecords}">
                 <div class="properties properties--grid">
                   <div class="properties__thumb"><a   class="item-photo"><img src="http://localhost:3000/produit/image/{{boutiques.photo1}}" max-width="20px" max-height="20px" alt=""/>
-                    <figure class="item-photo__hover item-photo__hover--params"> <span class="properties__time">Ajouter le: {{boutiques.createdAt}}</span><span  class="properties__more" (click)="gotodetails(boutiques.boutique.id,boutiques.id)">Plus d'information</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span><span class="properties__time">Quantité: {{boutiques.quantite}}</span>
+                    <figure class="item-photo__hover item-photo__hover--params"> <span class="properties__time">Ajouter le: {{boutiques.createdAt}}</span><span class="properties__time">Date limite de consommation: {{boutiques.DLC}}</span><span class="properties__time">Quantité: {{boutiques.quantite}}</span>
                     </figure></a><span class="properties__ribon">{{boutiques.categorie}}</span>
                   </div>
                   <!-- end of block .properties__thumb-->
                   <div class="properties__details">
-                    <div class="properties__info"><a href="property_details.html" class="properties__address"><span class="properties__address-street">{{boutiques.nom}}</span></a>
+                    <div class="properties__info"><a class="properties__address"><span class="properties__address-street">{{boutiques.nom}}</span> <span  class="properties__more" (click)="gotodetails(boutiques.boutique.id,boutiques.id)">Plus d'information</span></a>
                       <div class="properties__offer">
                         <div class="properties__offer-column">
                           <div class="properties__offer-label">Prix sans remise</div>
